# pyqoiv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst  pyqoiv.rst
pyqoiv/: decode.py  encode.py  opcodes.py  types.py
pyqov/: encode.py  types.py
tests/: samples.py  test_decoder.py  test_encoder.py  test_end2end.py  test_opcode.py  test_types.py
