[tool.poetry]
name = "pyqov"
version = "0.1.0"
description = "A python implementation of QOV, an video format based on QOI"
authors = ["Mark Goodall <mark.goodall@gmail.com>"]
readme = "README.md"
license= "MIT"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.10"
pyright = "^1.1.401"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
